# backend/api/src/main/java/net/functionhub/api/service/project/ProjectService.java
@@ -2,6 +2,7 @@ package net.functionhub.api.service.project;
 
 import net.functionhub.api.Code;
 import net.functionhub.api.CodeUpdateResult;
+import net.functionhub.api.FHFunction;
 import net.functionhub.api.FHFunctions;
 import net.functionhub.api.ForkRequest;
 import net.functionhub.api.ProjectCreateRequest;
@@ -18,6 +19,7 @@ public interface ProjectService {
   FHFunctions deleteFunction(String functionSlug);
   Projects deleteProject(String projectId);
   FHFunctions getAllFunctions(String projectId);
+  FHFunctions updateFunction(FHFunction fhFunction);
   Projects getAllProjects();
   Projects updateProject(ProjectUpdateRequest projectUpdateRequest);
   CodeUpdateResult forkCode(ForkRequest forkRequest);
